--- a/Develop/index.html
+++ b/Develop/index.html
@@ -10,25 +10,40 @@
   </head>
   <body>
     <div class="wrapper">
-      <header>
-        <h1>Password Generator</h1>
-      </header>
-      <div class="card">
-        <div class="card-header">
-          <h2>Generate a Password</h2>
-        </div>
+      <div class="card class-header">
         <div class="card-body">
-          <textarea
-            readonly
-            id="password"
-            placeholder="Your Secure Password"
-            aria-label="Generated Password"
-          ></textarea>
+          <h1 class="title">Password Generator</h1>
+          <h3 class="password-display" id="passwordDisplay">password</h3>
+          <form id="passwordGeneratorForm" class="form">
+            <label for="characterAmountNumber">Number Of Characters</label>
+            <div class="character-amount-container">
+              <input
+         type="range"
+         min="1"
+         max="50"
+         value="10"
+         id="characterAmountRange"
+              />
+         <input
+         class="number-input"
+         type="number"
+         min="1"
+         max="50"
+         value="10"
+         id="characterAmountNumber"
+              />
         </div>
-        <div class="card-footer">
-          <button id="generate" class="btn">Generate Password</button>
-        </div>
-      </div>
+        <label for="includeUppercase">Include Uppercase</label>
+        <input type="checkbox" id="includeUppercase" />
+
+        <label for="includeNumbers">Include Numbers</label>
+        <input type="checkbox" id="includeNumbers" />
+
+        <label for="includeSymbols">Include Symbols</label>
+        <input type="checkbox" id="includeSymbols">
+      
+        <button type="submit" class="btn">Generate Password</button>
+      </form>
     </div>
   </body>
-</html>
+ </html>
