--- a/Develop/index.html
+++ b/Develop/index.html
@@ -12,7 +12,7 @@
     <div class="wrapper">
       <div class="card class-header">
         <div class="card-body">
-          <h1 class="title">Password Generator</h1>
+          <h1>Password Generator</h1>
           <h3 class="password-display" id="passwordDisplay">password</h3>
           <form id="passwordGeneratorForm" class="form">
             <label for="characterAmountNumber">Number Of Characters</label>
