--- a/Develop/index.html
+++ b/Develop/index.html
@@ -23,7 +23,7 @@
                 type="range"
                 min="8"
                 max="128"
-                value="10"
+                value="0"
                 id="characterAmountRange"
               />
               <input
@@ -31,7 +31,7 @@
                 type="number"
                 min="8"
                 max="128"
-                value="10"
+                value="0"
                 id="characterAmountNumber"
               />
             </div>
@@ -49,6 +49,7 @@
         </div>
       </div>
     </div>
+    <footer>Created by Chris Newbold</footer>
   </body>
-  <footer></footer>
+  <!-- end of document -->
 </html>
