file name update

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       Newbold
     </title>
     <script src="/Assets/script.js" defer></script>
-    <link rel="stylesheet" href="/Assets/style.css" />
+    <link rel="/Assets/style.css" href="/Assets/style.css" />
   </head>
   <!-- Password generator box -->
   <body>
