--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
               />
             </div>
             <!-- case, number and symbol selectors -->
+            <label for="includeLowercase">Include Lowercase</label>
+            <input type="checkbox" id="includeLowercase" />
+
             <label for="includeUppercase">Include Uppercase</label>
             <input type="checkbox" id="includeUppercase" />
 
