--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
       Generate your own password with this Password Generator created by Chris
       Newbold
     </title>
-    <script src="/Assets/script.js" defer></script>
-    <link rel="stylesheet" href="/Assets/style.css" />
+    <script src="./Assets/script.js" defer></script>
+    <link rel="stylesheet" href="./Assets/style.css" />
   </head>
   <!-- Password generator box -->
   <body>
