--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!-- site title -->
     <title>
       Generate your own password with this Password Generator created by Chris
       Newbold
     </title>
+    <!-- file path and document links -->
     <script src="./Assets/script.js" defer></script>
     <link rel="stylesheet" href="./Assets/style.css" />
   </head>
@@ -41,16 +43,16 @@
                 id="characterAmountNumber"
               />
             </div>
-            <!-- case, number and symbol selectors -->
+            <!-- Lowercase selectors -->
             <label for="includeLowercase">Include Lowercase</label>
             <input type="checkbox" id="includeLowercase" />
-
+            <!-- Uppercase selectors -->
             <label for="includeUppercase">Include Uppercase</label>
             <input type="checkbox" id="includeUppercase" />
-
+            <!-- Number selectors -->
             <label for="includeNumbers">Include Numbers</label>
             <input type="checkbox" id="includeNumbers" />
-
+            <!-- Symbol selectors -->
             <label for="includeSymbols">Include Symbols</label>
             <input type="checkbox" id="includeSymbols" />
             <!-- button -->
