--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </section>
             <!-- Lowercase selectors -->
             <label for="includeLowercase">Include Lowercase</label>
-            <input type="checkbox" id="includeLowercase" name="one" value="1" />
+            <input type="checkbox" id="includeLowercase" name="includeLowercase" value="1" />
             <!-- Uppercase selectors -->
             <label for="includeUppercase">Include Uppercase</label>
             <input type="checkbox" id="includeUppercase" name="two" value="2" />
