--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
             <input type="checkbox" id="includeLowercase" name="includeLowercase" value="1" />
             <!-- Uppercase selectors -->
             <label for="includeUppercase">Include Uppercase</label>
-            <input type="checkbox" id="includeUppercase" name="two" value="2" />
+            <input type="checkbox" id="includeUppercase" name="includeUppercase" value="2" />
             <!-- Number selectors -->
             <label for="includeNumbers">Include Numbers</label>
-            <input type="checkbox" id="includeNumbers" name="three" value="3" />
+            <input type="checkbox" id="includeNumbers" name="includeNumbers" value="3" />
             <!-- Symbol selectors -->
             <label for="includeSymbols">Include Symbols</label>
-            <input type="checkbox" id="includeSymbols" name="four" value="4" />
+            <input type="checkbox" id="includeSymbols" name="includeSymbols" value="4" />
             <!-- button -->
             <button type="submit" class="btn">Generate Password</button>
           </form>
